# twitter-clone-backend

./: db.sqlite3  pyproject.toml  todo.md
tweets/: views.py
tweets/migrations/: 0001_initial.py
twitter_clone_project/: settings.py  urls.py
